fixed issue with app overflowing

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,10 +12,9 @@ body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   /* Borderless responsive design */
-  padding-top: env(safe-area-inset-top);
-  padding-right: env(safe-area-inset-right);
-  padding-bottom: env(safe-area-inset-bottom);
-  padding-left: env(safe-area-inset-left);
+  overflow: hidden;
+  padding: env(safe-area-inset-top), env(safe-area-inset-right),
+    env(safe-area-inset-bottom), env(safe-area-inset-left);
 }
 
 a {
