--- a/client/src/pages/home/home.css
+++ b/client/src/pages/home/home.css
@@ -226,9 +226,6 @@ h3 {
   h3 {
     font-size: 16px;
   }
-  a {
-    margin-top: 10px;
-  }
   .bg-container {
     border-radius: 15px;
   }
